<resources>
    <string name="app_name">My Application</string>
    <string name="iuca">IUCA</string>
    <string name="avai_aidarov">Avai Aidarov</string>
    <string name="aidarov_a_iuca_kg">aidarov_a@iuca.kg</string>
    <string name="_996509302202">+996509302202</string>
    <string name="todo">TODO</string>
    <string name="avai">AVAI</string>
    <string name="me">TODO</string>
    <string name="todo1">TODO</string>
    <string name="it_118">IT-118</string>
</resources>